# Privacy-Vault-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: auth.rs  config.rs  crypto.rs  error.rs  main.rs
src/api/: mod.rs  routes.rs
src/storage/: memory.rs  mod.rs  redis.rs
