[package]
name = "Privacy-Vault-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
anyhow = "1"
async-trait = "0.1"

# Crypto
aes-gcm = "0.10.3"
rand = "0.8"

# Storage
redis = { version = "0.25", features = ["tokio-comp"] }

# HTTP types
http = "1"